syntax = "proto3";

service MinMax {
    rpc Find (FindRequest) returns (FindResponse) {}
}

message FindRequest {
    repeated float numbers = 1;
}

message FindResponse {
    float min = 1;
    float max = 2;
}